--- a/n_highschool.css
+++ b/n_highschool.css
@@ -6,8 +6,45 @@
 
 /* ヘッダートップのナビメニュー */
 
-#n_header_top {width: 100%; height: 50px; background: #f7f7f7;}
+#n_header_top {width: 100%; height: 50px; /*background: #f7f7f7;*/ background: gray; margin: 0 auto; padding:0px 10px;}
 
 /* ヘッダートップナビメニュー左のメッセージ */
 
-.header_message {font-size: 14px; font-style: bold;}
+.header_message {font-size: 14px; width:230px;}
+
+/* ヘッダートップナビメニューのリンク一覧 */
+
+.header_navi_top {
+	float:left;
+}
+
+
+
+.header_navi_top li{
+	display: inline;
+	list-style:none;
+	font-size: 12px;
+	color: #c0c0c0;
+	padding: 20px 0px 20px 0px;
+	white-space: nowrap;
+}
+
+.header_navi_top a {
+	color:#999;
+	text-decoration: none;
+}
+
+.header_navi_top a:hover {
+	text-decoration: underline;
+}
+
+.header_navi_top li:after {
+	content: '|';
+	font-size: 12px;
+	padding: 0px 5px 0px 10px;
+	color: #c0c0c0;
+}
+
+.header_navi_top li:last-child:after{
+	content: "";
+}
