--- a/n_highschool.css
+++ b/n_highschool.css
@@ -2,31 +2,43 @@
 
 /* サイトのヘッダー全体ブロック */
 
-#n_school_header {width: 100%; height: 300px; background: orange;}
+#n_school_header {
+	width: 100%;
+	height: 300px;
+	background: orange;
+}
 
 /* ヘッダートップのナビメニュー */
 
-#n_header_top {width: 100%; height: 50px; /*background: #f7f7f7;*/ background: gray; margin: 0 auto; padding:0px 10px;}
+#n_header_top {
+	max-width: 1060px;
+	/*background: #f7f7f7;*/
+	font-size: 12px;
+	background: gray;
+	margin: 0 auto;
+	padding: 0 10px;
+}
 
 /* ヘッダートップナビメニュー左のメッセージ */
 
-.header_message {font-size: 14px; width:230px;}
+.header_message {
+	font-weight:700;
+	display: table;
+	float: left;
+}
 
 /* ヘッダートップナビメニューのリンク一覧 */
 
 .header_navi_top {
-	float:left;
+	padding:0 40px;
+	display: table;
+	float: right;
 }
 
-
-
 .header_navi_top li{
-	display: inline;
 	list-style:none;
-	font-size: 12px;
 	color: #c0c0c0;
-	padding: 20px 0px 20px 0px;
-	white-space: nowrap;
+	display: table-cell;
 }
 
 .header_navi_top a {
@@ -34,17 +46,15 @@
 	text-decoration: none;
 }
 
-.header_navi_top a:hover {
-	text-decoration: underline;
-}
 
 .header_navi_top li:after {
 	content: '|';
-	font-size: 12px;
-	padding: 0px 5px 0px 10px;
+	padding: 0px 15px 0px 15px;
 	color: #c0c0c0;
 }
 
-.header_navi_top li:last-child:after{
+.header_navi_top li:nth-of-type(n+6):after{
 	content: "";
 }
+
+
