--- a/n_highschool.css
+++ b/n_highschool.css
@@ -90,4 +90,26 @@
 
 
 
+#n_header_middle {
+	background:white;
+	max-width: 1060px;
+	height: 100px;
+	margin: 0 auto;
+	vertical-align: baseline;
+}
+
+
+.n_school_logo {
+
+}
+
+
+.header_middle_info {
+	float: right;
+
+	
+}
+
+
+
 
