--- a/n_highschool.css
+++ b/n_highschool.css
@@ -20,7 +20,7 @@
 	width: 100%;
 	max-width: 1060px;
 	font-size: 12px;
-	height: 40px;
+	height: 30px;
 	margin: 0 auto;
 	padding: 0 10px;
 	vertical-align: baseline;
@@ -37,13 +37,12 @@
 /* ヘッダートップナビメニューのリンク一覧 */
 
 .header_navi_top {
-	padding:0 40px;
 	display: table;
 	float: right;
 }
 
 .header_navi_top a {
-	color:#999;
+	color:#676767;
 	text-decoration: none;
 }
 
@@ -52,7 +51,6 @@
 }
 
 .header_navi_top li{
-	color: #c0c0c0;
 	display: table-cell;
 	text-align: center;
 }
@@ -60,7 +58,7 @@
 .header_navi_top li:after {
 	content: '|';
 	padding: 0px 15px 0px 15px;
-	color: #c0c0c0;
+	color: #676767;
 }
 
 .header_navi_top li:nth-of-type(n+6):after {
@@ -108,16 +106,23 @@
 .header_middle_info {
 	float: right;
 	display: inline;
-	padding-right: 40px;
 }
 
 .header_middle_info li {
 	text-decoration: none;
 	display: inline-block;
-	vertical-align: baseline;
-	clear: both;
 }
 
+.nschool_tel {
+	padding-right: 15px;
+}
 
+.header_middle_info li:nth-child(n + 5) {
+	padding-bottom: 10px;
+}
+
+.header_middle_info li:nth-child(n + 5):hover {
+		opacity:0.5;
+}
 
 
