ヘッダー下のコース紹介ナビを制作・調整中

--- a/n_highschool.css
+++ b/n_highschool.css
@@ -127,5 +127,25 @@
 	opacity: 0.7;
 }
 
+/* ヘッダー下のコース紹介ナビ */
+#n_header_bottom {
+	background:white;
+	max-width: 1060px;
+	height: 70px;
+	margin: 0 auto;
+	clear: both;
+}
+
+
+.course_info {
+	display: inline-block;
+	text-align: center;
+}
+
+.info_top {
+	
+}
+
+
 
 
