--- a/n_highschool.css
+++ b/n_highschool.css
@@ -144,17 +144,22 @@
 
 .info_top_first {
 	color: #1f286f;
-	font-size: 17px;
+	font-size: 16px;
 	font-weight: 500;
-
+	letter-spacing: 0.2em;
 }
 
-.info_bottom_first {
-	color: #1f286f;
-	font-size: 12px;
+.info_top {
+	font-size: 16px;
+	font-weight: 500;
+	letter-spacing: 0.2em;
 }
 
-
+.course_info li:first-child {
+	/*border-left:solid 1px #dcdddd*/
+	padding-left: 10px;
+	border-left:solid 1px blue;
+}
 
 
 
