--- a/n_highschool.css
+++ b/n_highschool.css
@@ -281,9 +281,20 @@
 /* ヘッダー下のリストテキストリンク */
 #header_list_link {
 	width: 100%;
-	height:70px;
-	background:#181836;
+	height: 70px;
+	background: #181836;
 	padding: 5px 0 5px;
+}
+
+#header_list_link:after {
+	content:'';
+	height: 0;
+	position:absolute;
+	width: 0;
+	border: 7px solid transparent;
+	border-bottom-color: #181836;
+	left: 130px;
+	bottom: 91px;
 }
 
 
