--- a/n_highschool.css
+++ b/n_highschool.css
@@ -4,7 +4,7 @@
 
 #n_school_header {
 	width: 100%;
-	height: 300px;
+	height: 262px;
 }
 
 /* ヘッダートップの背景色 */
@@ -294,7 +294,7 @@
 	width: 100%;
 	height: 70px;
 	background: #181836;
-	padding: 5px 0 5px;
+	padding: 5px 0 10px;
 }
 
 .text_links {
@@ -335,13 +335,20 @@
 }
 
 .about_school {
-
+	width: 100%;
+	height: 550px;
+	background: url("./image/nschool_image.png") no-repeat;
 }
 
 #n_highschool {
-	background: url("./image/nschool_image.png") no-repeat;
-	background-size: auto auto;
+	color: white;
+	font-size: 60px;
+	font-weight: 300px;
+	text-align: center;
+	position: relative;
+	top:70px;
 }
+
 
 
 
