--- a/n_highschool.css
+++ b/n_highschool.css
@@ -68,8 +68,9 @@
 	color: #000066;
 }
 
-.header_navi_top li:nth-of-type(7) {
+.header_navi_top li:nth-of-type(7) a {
 	background: rgb(217, 217, 217);
+	padding: 10px;
 }
 
 /* 生徒用ログインのアイコン */
@@ -337,11 +338,11 @@
 /* N高のイメージ背景画像 */
 .about_school {
 	width: 100%;
-	height: 550px;
+	height: 530px;
 	background: url("./image/nschool_image.png") no-repeat;
 }
 
-/*  */
+/*N高のタイトル字*/
 #n_highschool {
 	text-align: center;
 	position: relative;
@@ -356,6 +357,7 @@
 	font-family: 'Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
 }
 
+/*H1下の白線描画*/
 .nschool_title:before {
 	content: '';
 	position: absolute;
@@ -377,5 +379,34 @@
 	top:85px;
 	font-family: 'PT Sans Narrow',sans-serif;
 }
+
+/*パンくずリスト*/
+.n_breadcrumbs {
+	font-size: 14px;
+	padding: 10px 0 20px 45px;
+	border-bottom: solid 1px #e1e1e1;
+}
+
+.n_breadcrumbs li{
+	display: inline-block;
+	text-decoration: none;
+}
+
+.n_breadcrumbs li:first-child:after{
+	content: '>';
+	padding: 0 3px 0 8px;
+}
+
+.n_breadcrumbs li a{
+	color:#36538d;
+	text-decoration: none;
+}
+
+.n_breadcrumbs li a:hover{
+	text-decoration: underline;
+}
+
+
+
 
 
