--- a/n_highschool.css
+++ b/n_highschool.css
@@ -68,7 +68,8 @@
 	color: #000066;
 }
 
-.header_navi_top li:nth-of-type(7) a {
+.header_navi_top li:nth-of-type(7) a ,
+.header_navi_top li:nth-of-type(7) a:before {
 	background: rgb(217, 217, 217);
 	padding: 10px;
 }
@@ -361,8 +362,10 @@
 .nschool_title:before {
 	content: '';
 	position: absolute;
-	left: 470px;
+	left: 0px;
+	right: 0px;
 	bottom: -10px;
+	margin: auto;
 	display: inline-block;
 	width: 200px;
 	height: 1px;
