--- a/n_highschool.css
+++ b/n_highschool.css
@@ -68,13 +68,34 @@
 	color: #000066;
 }
 
-.header_navi_top li:nth-of-type(7) a ,
-.header_navi_top li:nth-of-type(7) a:before {
+.header_navi_top li:nth-of-type(7) a {
 	background: rgb(217, 217, 217);
-	padding: 10px;
+	padding: 0 -10px -10px 0;
 }
 
+
 /* 生徒用ログインのアイコン */
+/*
+.header_navi_top li:nth-of-type(7):before {
+	content: url("./image/header_navi_icon.png");
+	display: inline-block;
+	transform: scale(0.5);
+	vertical-align: middle;
+	background: rgb(217, 217, 217);
+}
+*/
+
+/* 生徒用ログインのアイコンリスト */
+
+#login_icon {
+	content: url("./image/header_navi_icon.png");
+	display: inline-block;
+	transform: scale(0.5);
+	vertical-align: middle;
+	background: rgb(217, 217, 217);
+}
+
+/*
 .header_navi_top li:nth-of-type(7):before {
 	content: "";
 	display: inline-block;
@@ -86,6 +107,10 @@
 	background-size: contain;
 	vertical-align: middle;
 }
+
+.header_navi_top li:nth-of-type(7) a:before
+
+*/
 
 
 /* ヘッダー中央 */
@@ -409,7 +434,7 @@
 	text-decoration: underline;
 }
 
-
+/*パンくずリスト*/
 
 
 
