--- a/n_highschool.css
+++ b/n_highschool.css
@@ -401,7 +401,7 @@
 }
 
 /*N高のタイトル字*/
-#n_highschool {
+h1#n_highschool {
 	text-align: center;
 	position: relative;
 	top:70px;
@@ -430,6 +430,7 @@
 	border-radius: 2px;
 }
 
+/*白線下のAbout School*/
 .h1_aboutschool {
 	text-align: center;
 	color: white;
@@ -466,7 +467,27 @@
 	text-decoration: underline;
 }
 
-/*パンくずリスト*/
+/*メインコラムのブロック*/
+#nschool_mission {
+	width: 100%;
+	height: 1000px;
+}
+
+/*メインコラム トップのH2メッセージ*/
+h2#IT_Global {
+	text-align: center;
+	position: relative;
+	top:80px;
+}
+
+.creativity {
+	font-size: 30px;
+	font-weight: 300;
+	letter-spacing: 0.2em;
+	font-family: 'Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
+	line-height: 1.8;
+}
+
 
 
 
