--- a/n_highschool.css
+++ b/n_highschool.css
@@ -473,13 +473,33 @@ h1#n_highschool {
 	height: 1000px;
 }
 
-/*メインコラム トップのH2メッセージ*/
+/*メインコラム H2のブロック*/
 h2#IT_Global {
 	text-align: center;
 	position: relative;
 	top:80px;
 }
 
+h2#subjective_action {
+	text-align: center;
+	padding-top: 130px;
+}
+
+h2#subjective_action:before {
+	content: '';
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	top: 1290px;
+	margin: auto;
+	display: inline-block;
+	width: 200px;
+	height: 1px;
+	background-color: black;
+	border-radius: 2px;
+}
+
+/*メインコラム トップのH2メッセージ*/
 .creativity {
 	font-size: 30px;
 	font-weight: 300;
@@ -488,6 +508,13 @@ h2#IT_Global {
 	line-height: 1.8;
 }
 
-
+/*メインコラム 2番目のメッセージ*/
+.my_thinking {
+	font-size: 20px;
+	font-weight: 500;
+	letter-spacing: 0.1em;
+	font-family: 'Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
+	line-height: 1.8;
+}
 
 
