・H2下のPタグ文章を作成

--- a/n_highschool.css
+++ b/n_highschool.css
@@ -517,4 +517,12 @@ h2#subjective_action:before {
 	line-height: 1.8;
 }
 
+.learn_creativity {
+	width: 570px;
+	margin: 0 auto;
+	font-size: 15px;
+	padding-top: 30px;
+	line-height: 1.8;
+}
+
 
