--- a/n_highschool.css
+++ b/n_highschool.css
@@ -470,7 +470,8 @@ h1#n_highschool {
 /*メインコラムのブロック*/
 #nschool_mission {
 	width: 100%;
-	height: 1000px;
+	height: 650px;
+	background-color: orange;
 }
 
 /*メインコラム H2のブロック*/
@@ -524,5 +525,34 @@ h2#subjective_action:before {
 	padding-top: 30px;
 	line-height: 1.8;
 }
+
+/*教育方針*/
+#educational_policy {
+	max-width: 1060px;
+	margin: 0 auto;
+	font-style: normal;
+	height: 300px;
+	background-color: red;
+}
+
+h2#education {
+	border-bottom: solid 1px black;
+	line-height: 2;
+}
+
+h2#education:after {
+	content: '';
+	position: relative;
+	top: 14px;
+	right: 103px;
+	display: inline-block;
+	width: 300px;
+	height: 2px;
+	background-color: black;
+	border-radius: 2px;
+}
+
+
+
 
 
