--- a/n_highschool.css
+++ b/n_highschool.css
@@ -471,7 +471,6 @@ h1#n_highschool {
 #nschool_mission {
 	width: 100%;
 	height: 650px;
-	background-color: orange;
 }
 
 /*メインコラム H2のブロック*/
@@ -584,8 +583,10 @@ h2#education:after {
 }
 
 .three_list {
-	padding-right: 10px;
+	padding-left: 15px;
 }
 
-
+.triangle {
+	float: right;
+}
 
