--- a/n_highschool.css
+++ b/n_highschool.css
@@ -572,7 +572,7 @@ h2#education:after {
 	padding: 10px 0px 25px 0px;
 }
 
-
+/*spanで文章の調整*/
 .list_three {
 	list-style-type: none;
 	font-weight: 600;
@@ -586,7 +586,14 @@ h2#education:after {
 	padding-left: 15px;
 }
 
+/*右の三角形図式*/
 .triangle {
 	float: right;
+	position: relative;
+	bottom: 200px;
 }
+
+
+
+
 
