--- a/n_highschool.css
+++ b/n_highschool.css
@@ -593,7 +593,53 @@ h2#education:after {
 	bottom: 200px;
 }
 
+/*N STANDARDのリンク*/
+.nstandard_link {
+	max-width: 690px;
+	height: 310px;
+	background-color: #f7f7f7;
+	clear: both;
+	margin: 80px auto;
+}
 
+/*ロゴの画像*/
+.nstandard_logo {
+	padding: 10px 20px 30px 30px;
+	float: left;
 
+}
+
+a.nstandard_a {
+	text-decoration: none;
+}
+
+h2#nstandard_info {
+	text-decoration: none;
+	color: black;
+	font-size: 18px;
+	padding-top: 20px;
+	font-weight: 500;
+}
+
+.nstandard_text {
+	letter-spacing: 0.1em;
+	line-height: 1.8;
+	font-size: 14px;
+	color: black;
+}
+
+.read_more {
+	vertical-align: top;
+	font-size: 14px;
+	font-weight: 600;
+	color: black;
+}
+
+.read_more:before {
+	content: ">";
+	padding-right: 10px;
+	vertical-align: super;
+	font-weight: 600;
+}
 
 
