--- a/n_highschool.css
+++ b/n_highschool.css
@@ -610,9 +610,26 @@ a.nstandard_a {
 	max-width: 1060px;
 	margin: 0 auto;
 	font-style: normal;
-	height: 300px;
+	height: 600px;
 }
 
+.n_many_time {
+	width: 500px;
+	height: 300px; 
+}
 
+.many_time {
+	font-size: 26px;
+	font-weight: 400;
+	line-height: 1.6;
+	padding: 30px 0;
+}
 
-
+.many_time:after {
+	content: '';
+	display: inline-block;
+	width: 500px;
+	height: 1px;
+	background-color: black;
+	border-radius: 2px;
+}
