文章のテンプレート作成

--- a/n_highschool.css
+++ b/n_highschool.css
@@ -613,6 +613,7 @@ a.nstandard_a {
 	height: 600px;
 }
 
+/*左側のブロック範囲*/
 .n_many_time {
 	width: 500px;
 	height: 300px; 
@@ -622,7 +623,7 @@ a.nstandard_a {
 	font-size: 26px;
 	font-weight: 400;
 	line-height: 1.6;
-	padding: 30px 0;
+	padding-top: 30px;
 }
 
 .many_time:after {
@@ -633,3 +634,12 @@ a.nstandard_a {
 	background-color: black;
 	border-radius: 2px;
 }
+
+/*◎◎◎ (重複利用)説明文章のテンプレート ◎◎◎*/
+.p_standard {
+	width: 500px;
+	font-size: 17px;
+	line-height: 1.7;
+}
+
+
