--- a/n_highschool.css
+++ b/n_highschool.css
@@ -437,7 +437,7 @@ h2#IT_Global {
 	top:80px;
 }
 
-h2#subjective_action {
+h2.subjective_action {
 	text-align: center;
 	padding-top: 130px;
 }
@@ -659,8 +659,41 @@ a.nstandard_a {
 #advanced_program {
 	max-width: 1060px;
 	margin: 0 auto;
-	height: 300px;
+	height: 600px;
+}
+
+/*メイン下 フッター上の一覧ブロック*/
+#n_school_infolist {
+	max-width: 1060px;
+	margin: 0 auto;
+	height: 3000px;
+	border-bottom: solid 1px #e2e2e2;
+}
+
+/*高卒資格取得のためのBasic Program*/
+.basicprogram_info {
+	max-width: 1060px;
+	margin: 0 auto;
+	height: 800px;
+	background: #f7f7f7: 
 }
 
 
+h2.standard_heading {
+	text-align: center;
+	padding-top: 130px;
+}
 
+h2.standard_heading:before {
+	content: '';
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	top: 1290px;
+	margin: auto;
+	display: inline-block;
+	width: 200px;
+	height: 1px;
+	background-color: black;
+	border-radius: 2px;
+}
