--- a/n_highschool.css
+++ b/n_highschool.css
@@ -674,7 +674,7 @@ a.nstandard_a {
 .basicprogram_info {
 	width: 100%;
 	margin: 0 auto;
-	height: 800px;
+	height: 1500px;
 	background-color: #f7f7f7; 
 }
 
@@ -702,10 +702,26 @@ h2.standard_heading:before {
 
 /*中央寄せの説明テキスト*/
 .p_standard_center {
-	font-size: 16px;
+	font-size: 15px;
 	line-height: 1.7;
 	text-align: center;
 	padding: 30px 0;
+}
+
+/*basic Programの画像付き説明ブロック*/
+.AP_block {
+	max-width: 1060px;
+	margin: 0 auto;
+	height: 600px;
+}
+
+/*画像左のブロック*/
+.image_left {
+	float: left;
+}
+
+.info_right {
+
 }
 
 
