--- a/n_highschool.css
+++ b/n_highschool.css
@@ -605,6 +605,7 @@ a.nstandard_a {
 	font-weight: 600;
 }
 
+/*headingのH2下線見出しスタート*/
 /*N高の魅力*/
 #nschool_attraction {
 	max-width: 1060px;
@@ -671,6 +672,7 @@ a.nstandard_a {
 	border-bottom: solid 1px #e2e2e2;
 }
 
+/*ここからグレーブロックスタート*/
 /*高卒資格取得のためのBasic Program*/
 .basicprogram_info {
 	width: 100%;
@@ -681,16 +683,18 @@ a.nstandard_a {
 	border-bottom: solid 1px #e2e2e2;
 }
 
+
+
+
 /*◎◎◎ （重複）Adbanced,BasicのH2トップ見出し ◎◎◎*/
-h2.standard_heading {
+h2.basicprogram_heading {
 	text-align: center;
-	padding-top: 90px;
+	padding-top: 75px;
 	font-size: 32px;
 	font-weight: 400;
 }
 
-
-h2.standard_heading:before {
+h2.basicprogram_heading:before {
 	content: '';
 	position: absolute;
 	left: 0px;
@@ -704,6 +708,7 @@ h2.standard_heading:before {
 	border-radius: 2px;
 }
 
+
 /*◎◎◎ （重複）中央寄せの説明テキスト ◎◎◎*/
 .p_standard_center {
 	font-size: 15px;
@@ -713,10 +718,10 @@ h2.standard_heading:before {
 }
 
 /*◎◎◎ （重複）basic Programの画像付き説明ブロック ◎◎◎*/
-.AP_block {
+.BP_block {
 	max-width: 1060px;
 	margin: 0 auto;
-	height: 1000px;
+	height: 1210px;
 }
 
 /*◎◎◎ （重複）画像左のブロック ◎◎◎*/
@@ -775,6 +780,34 @@ h2.bp_heading {
 	color: black;
 }
 
+/*背景白のAPブロックスタート*/
+/*将来に繋がるAdvanced Program*/
+.AP_block {
+	max-width: 1060px;
+	margin: 0 auto;
+	height: 5200px;
+}
 
+.advanced_heading {
+	text-align: center;
+	padding-top: 75px;
+	font-size: 32px;
+	font-weight: 400;
+}
+
+/*Advanced Programの下線*/
+.advanced_heading:before {
+	content: '';
+	position: absolute;
+	left: 0px;
+	right: 0px;
+	top: 5386px;
+	margin: auto;
+	display: inline-block;
+	width: 200px;
+	height: 1px;
+	background-color: black;
+	border-radius: 2px;
+}
 
 
