--- a/n_highschool.css
+++ b/n_highschool.css
@@ -838,21 +838,45 @@ h2.bp_heading {
 #fourblock_link {
 	max-width: 1060px;
 	margin: 0 auto;
+
 }
 
 /*四方リンクの設定*/
 .four_link {
-	width: 490px;
+	width: 450px;
 	height: 145px;
 	background-color: white;
 	border: 1px solid black;
 	list-style-type: none;
-	display: inline-block;
+	padding-left: 0px;
+
+}
+
+/**/
+.four_link_a {
+	text-decoration: none;
+	color: #272727;
+	display: flex;
+	justify-content: space-between;
+	padding-top: 40px;
 }
 
 .four_link li {
-	font-size: 18px;
 	vertical-align: middle;
+	padding: 30px;
 }
+
+/*四方リンクリスト上の書式*/
+.fourblock_link_list_top {
+	font-size: 26px;
+}
+
+.fourblock_link_list_bottom {
+	font-size: 14px;
+}
+
+
+
+
 
 
