--- a/n_highschool.css
+++ b/n_highschool.css
@@ -841,6 +841,7 @@ h2.bp_heading {
 	height: 450px;
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 /*四方リンクの設定*/
@@ -861,7 +862,6 @@ h2.bp_heading {
     right: 20px;
 }
 
-/*リスト全体のCSS*/
 .four_link_a {
 	text-decoration: none;
 	color: #272727;
@@ -872,8 +872,32 @@ h2.bp_heading {
 	opacity: 0.7;
 }
 
-
 .four_link li {
+	padding: 20px 20px;
+	display: table-cell;
+	vertical-align: middle;
+	line-height: 1.5;
+}
+
+/*四方リンク下段の設定*/
+.four_link_bottom {
+	width: 450px;
+	height: 125px;
+	background-color: white;
+	border: 1px solid black;
+	list-style-type: none;
+	padding-left: 0px;
+	display: table;
+}
+
+.four_link_bottom::after {
+    content: ">";
+    position: relative;
+    top: 50px;
+    right: 15px;
+}
+
+.four_link_bottom li {
 	padding: 20px 20px;
 	display: table-cell;
 	vertical-align: middle;
@@ -887,8 +911,7 @@ h2.bp_heading {
 }
 
 .fourblock_link_list_bottom {
-	font-size: 14px;
-	letter-spacing: 1px;
+	font-size: 13px;
 }
 
 
